Fix nav spacing issue on small devices

--- a/src/Scss/navbar.scss
+++ b/src/Scss/navbar.scss
@@ -13,17 +13,16 @@ $NavBorderRadius: 10px;
   position: sticky;
   z-index: 1000;
   display: flex;
-  padding: 5px 20px 5px 20px;
   background-color: white;
   backdrop-filter: blur(10px);
   border-radius: 0px 0px $NavBorderRadius $NavBorderRadius;
   box-shadow:0px 2px 2px globals.$BoxShadowColor;
+  padding: 0px 20px 0px 20px;
   user-select: none; 
 }
 
 %NavContainer {
   display: flex;
-  margin: 0px 20px 0px 20px;
   padding: 5px;
 }
 
@@ -53,7 +52,7 @@ $NavBorderRadius: 10px;
 }
 
 .NavItem:hover {
-  color: black;
+  color: black!important;
   border-radius: 20px;
 }
 
